# Enjin

./: .env.example  .env.prod.example  .gitattributes  .gitignore  README.md  docker-compose.coolify.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  quickstart.bat  quickstart.ps1  quickstart.sh
.github/workflows/: ci.yml  deploy.yml
api/: Dockerfile  pyproject.toml
api/app/: config.py  main.py
api/app/db/: neo4j.py  postgres.py  search.py
api/app/models/: entities.py  events.py
api/app/routers/: entities.py  events.py  graph.py  search.py  watchers.py
api/app/services/: graph.py
api/tests/: conftest.py  test_config.py  test_models.py  test_routers_entities.py  test_routers_events.py  test_routers_graph.py  test_routers_search.py  test_routers_watchers.py  test_services_graph.py
data/schema/: neo4j_constraints.cypher  postgres_init.sql
data/seeds/: sample_sources.json
deploy/: backup.sh  deploy.sh  setup.sh
deploy/nginx/: Dockerfile  default.conf  default.nossl.conf  nginx.conf
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: EntityPanel.tsx  Globe.tsx  SearchBar.tsx  Timeline.tsx  WatcherOverlay.tsx
frontend/src/hooks/: useGlobeData.ts
frontend/src/lib/: api.ts  types.ts
ingestion/: Dockerfile  pyproject.toml
ingestion/app/: config.py  main.py
ingestion/app/adapters/: __init__.py  base.py  cvr.py  gdelt.py  rss.py
ingestion/app/pipeline/: extractor.py  geocoder.py  normalizer.py
ingestion/app/tasks/: ingest.py
ingestion/tests/: conftest.py  test_adapter_registry.py  test_adapters_base.py  test_adapters_cvr.py  test_adapters_gdelt.py  test_adapters_rss.py  test_pipeline_extractor.py  test_pipeline_geocoder.py  test_pipeline_normalizer.py
