[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enjin-api"
version = "0.1.0"
description = "Enjin OSINT Platform — API Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.27,<1",
    "neo4j>=5.17,<6",
    "asyncpg>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "geoalchemy2>=0.14,<1",
    "redis>=5.0,<6",
    "meilisearch>=0.31,<1",
    "pydantic-settings>=2.1,<3",
    "httpx>=0.27,<1",
    "python-dotenv>=1.0,<2",
    "gunicorn>=21.2,<23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
