[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enjin-ingestion"
version = "0.1.0"
description = "Data ingestion pipeline for the Enjin OSINT platform"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.3,<6",
    "redis>=5.0,<6",
    "feedparser>=6.0,<7",
    "httpx>=0.27,<1",
    "neo4j>=5.0,<6",
    "asyncpg>=0.29,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "spacy>=3.7,<4",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-celery>=0.0.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
